--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Delete.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Delete.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+            <img src="@Model.ImageUrl" alt="@Model.ImageUrl" style="width: 300px; height: 200px" />
         </dd>
     </dl>
     
