--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
@@ -46,11 +46,10 @@
                 @Html.DisplayFor(modelItem => item.Cost)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+                <img src="@item.ImageUrl" alt="@item.ImageUrl" style="width: 300px; height: 200px" />
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
