--- a/sci-DepartTP1/Super Cartes Infinies/Views/Shared/_Layout.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Shared/_Layout.cshtml
@@ -22,6 +22,16 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cards" asp-action="Index">Cartes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StarterCards" asp-action="Index">Cartes de départ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GameConfigs" asp-action="Index">Configuration</a>
+                        </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
