--- a/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Index.cshtml
@@ -12,6 +12,21 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.Attack)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.Health)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.Cost)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.ImageUrl)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -19,8 +34,22 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Card.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Card.Attack)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Card.Health)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Card.Cost)
+            </td>
+            <td>
+                <img src="@item.Card.ImageUrl" alt="@item.Card.ImageUrl" style="width: 300px; height: 200px" />
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
