--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Créer un nouveau</a>
 </p>
 <table class="table">
     <thead>
@@ -49,8 +49,8 @@
                 <img src="@item.ImageUrl" alt="@item.ImageUrl" style="width: 300px; height: 200px" />
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
