--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Créer un nouveau</a>
 </p>
 <table class="table">
     <thead>
@@ -31,8 +31,8 @@
                 @Html.DisplayFor(modelItem => item.NbManaToReceive)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
