--- a/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Create.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Créer</h1>
 
-<h4>StarterCard</h4>
+<h4>Cartes de départ</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -48,14 +48,14 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retourner à la liste</a>
 </div>
 
 
