FCT : Afficher la rareté des cartes et ajustement du seed des cartes
Ajouter la possibilité de voir la rareté d’une carte en MVC.
Modifier le seed des cartes avec au moins 2 cartes pour chaque rareté.

--- a/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Card.ImageUrl)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Card.Rarity)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 <img src="@item.Card.ImageUrl" alt="@item.Card.ImageUrl" style="width: 300px; height: 200px" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Card.Rarity)
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
