--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Index.cshtml
@@ -27,6 +27,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.ImageUrl)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Rarity)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -47,6 +50,9 @@
             </td>
             <td>
                 <img src="@item.ImageUrl" alt="@item.ImageUrl" style="width: 300px; height: 200px" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Rarity)
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
