FCT :  Ajout de la possibilité de changer la rareté d’une carte
Ajouter la possibilité de changer la rareté d’une carte en MVC.

--- a/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Delete.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Delete.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.Card.Cost)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Card.Rarity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Card.Rarity)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Card.ImageUrl)
         </dt>
         <dd class="col-sm-10">
