--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Delete.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Delete.cshtml
@@ -36,6 +36,12 @@
             @Html.DisplayFor(model => model.Cost)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Rarity)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Rarity)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
         <dd class = "col-sm-10">
