--- a/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Edit.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/StarterCards/Edit.cshtml
@@ -43,6 +43,10 @@
                     <input id="CardCost" class="form-control" readonly />
                 </div>
                 <div class="form-group">
+                    <label asp-for="StarterCard.Card.Rarity"></label>
+                    <input id="CardRarity" class="form-control" readonly />
+                </div>
+                <div class="form-group">
                     <label asp-for="StarterCard.Card.ImageUrl"></label>
                     <img id="CardImageUrl" class="form-control" style="width: 416px; height: 300px" readonly />
              </div>
@@ -78,6 +82,7 @@
                         $('#CardHealth').val(data.health);
                         $('#CardCost').val(data.cost);
                         $('#CardImageUrl').attr('src', data.imageUrl);
+                        $('#CardRarity').val(data.rarity);
                     }
                 });
             } else {
