FCT : Configurer la monnaie virtuelle
Tâche MVC de configuration de la monnaie virtuelle:
Reçue à la création du compte
Reçue après une victoire
Reçue après une défaite (plus petit montant)

--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Delete.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Delete.cshtml
@@ -22,6 +22,24 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NbManaToReceive)
+        </dd> 
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BeginnerMoney)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BeginnerMoney)
+        </dd>        
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WinnerMoney)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WinnerMoney)
+        </dd>        
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.LoserMoney)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.LoserMoney)
         </dd>
     </dl>
     
