--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
@@ -18,6 +18,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.NbManaToReceive)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BeginnerMoney)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.WinnerMoney)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LoserMoney)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +38,15 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NbManaToReceive)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BeginnerMoney)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WinnerMoney)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LoserMoney)
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
