--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Edit.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <h4>Cartes</h4>
 <hr />
-<div class="row">
+<div class="row" >
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -44,28 +44,16 @@
                 <div>
                     @Html.DropDownListFor(m => m.SelectedPowerId, Model.AvailablePowers, "Aucun")
                 </div>
-                <span asp-validation-for="SelectedPowerId" class="text-danger"></span>
+
             </div>
 
-            @* Card's powers *@
-            @if (Model.Card.CardPowers.Count() == 0)
-            {
-                <p> Cette carte ne possède aucun pouvoirs</p>
-            }
-            else
-            {
-                <div class="form-group">
-                    <label asp-for="Card.CardPowers" class="control-label"></label>
-                    <input asp-for="Card.CardPowers" class="form-control" />
-                    <span asp-validation-for="Card.CardPowers" class="text-danger"></span>
-                </div>
-            }
+
             
             @* Value *@
             <div class="form-group">
                 <label asp-for="PowerValue" class="control-label">Power Value</label>
                 <input asp-for="PowerValue" class="form-control" />
-                <span asp-validation-for="PowerValue" class="text-danger"></span>
+@*                 <span asp-validation-for="PowerValue" class="text-danger"></span> *@
             </div>
 
 
@@ -74,6 +62,34 @@
                 <input type="submit" value="Enregistrer" class="btn btn-primary" />
             </div>
         </form>
+        <form asp-action="DeletePower">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="@Model.Card.Id" />
+            <input type="hidden" asp-for="@Model.Card.Id" />
+            @* Card's powers *@
+            @if (Model.Card.CardPowers.Count() == 0)
+            {
+                <p> Cette carte ne possède aucun pouvoirs</p>
+            }
+            else
+            {
+
+                @foreach (var cardPower in Model.Card.CardPowers)
+                {
+                    <div class="card-container">
+                        <input type="submit" value="X" class="close-btn" />
+                        <div class="card-text">
+                            @(cardPower.Power.Name + " : ")@cardPower.Value
+                        </div>
+                    </div>
+                }
+            }
+
+@*             <div class="form-group">
+                <input type="submit" value="X" class="btn btn-primary" />
+            </div> *@
+        </form>
+
     </div>
 </div>
 
@@ -81,6 +97,52 @@
     <a asp-action="Index">Retourner à la liste</a>
 </div>
 
+
+
+
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    @* Style pour un power (card) *@
+    <style>
+        .card-container {
+            position: relative;
+            width: 150px;
+            height: 50px;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            background-color: #f8f9fa;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin-top: 10px
+        }
+
+        .card-text {
+            position: absolute;
+            text-align: center;
+            font-size: 12px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* Centers the text */
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 2px;
+            right: 4px;
+            background: none;
+            border: none;
+            font-size: 12px;
+            cursor: pointer;
+            color: #999;
+        }
+
+            .close-btn:hover {
+                color: #333;
+            }
+    </style>
+    
 }
+
+
