FCT_Max de deck et de carte dans gameConfig

--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Index.cshtml
@@ -18,6 +18,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.NbManaToReceive)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NbMaxDeck)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NbMaxCard)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -29,6 +35,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NbManaToReceive)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NbMaxDeck)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NbMaxCard)
             </td>
             <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
