--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Create.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Create.cshtml
@@ -23,6 +23,16 @@
                 <span asp-validation-for="NbManaToReceive" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NbMaxDeck" class="control-label"></label>
+                <input asp-for="NbMaxDeck" class="form-control" />
+                <span asp-validation-for="NbMaxDeck" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NbMaxCard" class="control-label"></label>
+                <input asp-for="NbMaxCard" class="form-control" />
+                <span asp-validation-for="NbMaxCard" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
         </form>
