--- a/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Delete.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/GameConfigs/Delete.cshtml
@@ -23,6 +23,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NbManaToReceive)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NbMaxDeck)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NbMaxDeck)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NbMaxCard)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NbMaxCard)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
