--- a/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Edit.cshtml
+++ b/sci-DepartTP1/Super Cartes Infinies/Views/Cards/Edit.cshtml
@@ -60,11 +60,11 @@
 
 
             <div class="form-group">
-                <label asp-for="Rarity" class="control-label"></label>
-                <select asp-for="Rarity" class="form-control" asp-items="Html.GetEnumSelectList<Rarity>()">
+                <label asp-for="Card.Rarity" class="control-label"></label>
+                <select asp-for="Card.Rarity" class="form-control" asp-items="Html.GetEnumSelectList<Rarity>()">
                     <option value="">Sélectionner une rareté</option>
                 </select>
-                <span asp-validation-for="Rarity" class="text-danger"></span>
+                <span asp-validation-for="Card.Rarity" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Enregistrer" class="btn btn-primary" />
